sandbox/output
StringCalculator.java:5: error: cannot find symbol
        List<String> numbers = parser.parse(string);
                                     ^
  symbol:   method parse(String)
  location: variable parser of type StringCalculatorParser
StringCalculatorTest.java:8: error: method add in class StringCalculator cannot be applied to given types;
        assertEquals(0, StringCalculator.add(""));
                                        ^
  required: String,StringCalculatorParser
  found: String
  reason: actual and formal argument lists differ in length
2 errors
